# AI-Buddy

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/debug/: memory-db-not-created.md  memory-recording-not-working.md  region-select-no-thumbnail.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/notes/: ai-buddy-product-vision.md
.planning/phases/01-infrastructure-app-shell/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-REVIEW-FIX.md  01-REVIEW.md  01-UI-SPEC.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-core-ai-loop/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-REVIEW.md  02-UI-SPEC.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-voice-i-o/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-screen-region-selection/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-UAT.md  04-UI-SPEC.md  04-VALIDATION.md
.planning/phases/05-learning-adaptation/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-UAT.md  05-VALIDATION.md
.planning/phases/06-voice-settings/: 06-01-PLAN.md  06-01-SUMMARY.md  06-RESEARCH.md  06-UAT.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-production-readiness/: 07-01-PLAN.md  07-01-SUMMARY.md  07-UAT.md
.planning/phases/08-backend-foundations/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-HUMAN-UAT.md  08-RESEARCH.md  08-REVIEW-FIX.md  08-REVIEW.md  08-SECURITY.md  08-UAT.md  08-VALIDATION.md  08-VERIFICATION.md
.planning/phases/09-state-machine-conversation-continuity/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-CONTEXT.md  09-DISCUSSION-LOG.md  09-RESEARCH.md  09-REVIEW-FIX.md  (+7 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: app-specific-tuning.md
docs/: index.html  macos-beta-install.md  windows-beta-install.md
scripts/: sign-and-notarize.sh
src/: App.tsx  index.tsx  updater.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: app_context.rs  lib.rs  main.rs  memory.rs  permissions.rs  preferences.rs  screenshot.rs  shortcut.rs  tray.rs  window.rs
src-tauri/src/voice/: audio_cue.rs  mod.rs  ptt.rs  tts.rs
src-tauri/tests/: phase8-structural-verify.sh
src/components/: DragHandle.tsx  EmptyState.tsx  GuidanceList.tsx  LoadingDots.tsx  PermissionDialog.tsx  QuickActions.tsx  QuotaBanner.tsx  RawGuidanceText.tsx  RegionSelect.tsx  SessionFeed.tsx  SettingsScreen.tsx  SidebarShell.tsx  StepChecklist.tsx  TextInput.tsx  TryAnotherWay.tsx
src/lib/: ai.ts  parseSteps.test.ts  parseSteps.ts  quickActionPresets.test.ts  quickActionPresets.ts  tauri.ts
src/styles/: theme.css
worker/: .dev.vars  package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/scripts/: smoke-test.mjs
worker/src/: index.test.ts  index.ts
(+99 files in other folders)
