[package]
name = "ai-buddy"
version = "0.1.0"
description = "AI Buddy - Real-time software guidance"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
uuid = { version = "1", features = ["v4"] }
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
