[package]
name = "ai-buddy"
version = "0.1.3"
description = "AI Buddy - Real-time software guidance"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
uuid = { version = "1", features = ["v4"] }
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Voice I/O — Phase 3
cpal = "0.17"
rodio = { version = "0.22", features = ["mp3"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Learning & Adaptation — Phase 5 (D-07)
rusqlite = { version = "0.39", features = ["bundled"] }

# Context Awareness — Phase 8 (CTX-01, CTX-03)
active-win-pos-rs = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
window-vibrancy = "0.5"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
# objc2 / objc2-app-kit pinned to same versions as tauri-nspanel so they share
# a single copy in the final binary and type identity is preserved.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "block2"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }
block2 = { version = "0.6", features = ["alloc"] }
